correction of findEmployeesOlderThen method